# RayPongCpp

./: .clang-format  .gitignore  CMakeLists.txt
resources/: crt.fs  loop_hero_crt.frag
src/: CMakeLists.txt  main.cpp
src/game/: Ball.cpp  Ball.h  Game.cpp  Game.h  Paddle.cpp  Paddle.h  SoundManager.cpp  SoundManager.h  UI.cpp  UI.h  ball.cpp  ball.h  game.cpp  game.h  paddle.cpp  paddle.h  sounds.cpp  ui.cpp
